Fix tests to run with Triq
Used CouchDB's Triq port

Had to uncomment a bunch of bisect module checks. That made the diff kind of
ugly.

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,9 @@
 {cover_enabled, true}.
 
+{deps, [
+         {triq, "", {git, "https://github.com/apache/couchdb-triq", {tag, "v1.2.0"}}}
+       ]}.
+
 {port_specs, [
               {"priv/hyper_carray.so", ["c_src/hyper_carray.c"]}
              ]}.
