--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {cover_enabled, true}.
 
 {deps, [
-         {triq, "", {git, "https://github.com/apache/couchdb-triq", {tag, "v1.2.0"}}}
+         {triq, ".*", {git, "https://github.com/apache/couchdb-triq.git", {tag, "v1.2.0"}}}
        ]}.
 
 {port_specs, [
