Try using rebar3

--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,26 @@
 {cover_enabled, true}.
 
 {port_specs, [
-              {"priv/hyper_carray.so", ["c_src/hyper_carray.c"]}
-             ]}.
+    {"priv/hyper_carray.so", ["c_src/hyper_carray.c"]}
+]}.
 
 {port_env, [
-            {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-                "CFLAGS", "$CFLAGS -std=c99 -Wall -Werror -O3"},
-            {"win32", "CXXFLAGS", "$CXXFLAGS /O2 /DNDEBUG"}
-           ]}.
+    {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)", "CFLAGS",
+        "$CFLAGS -std=c99 -Wall -Werror -O3"},
+    {"win32", "CXXFLAGS", "$CXXFLAGS /O2 /DNDEBUG"}
+]}.
+
+{profiles, [
+    {test, [{deps, [{triq, {git, "https://github.com/apache/couchdb-triq.git", {tag, "v1.2.0"}}}]}]}
+]}.
+
+{plugins, [{pc, "~> 1.0"}]}.
+{artifacts, [
+    "priv/hyper_carray.so"
+]}.
+{provider_hooks, [
+    {post, [
+        {compile, {pc, compile}},
+        {clean, {pc, clean}}
+    ]}
+]}.
